--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "Movies API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tamperic/movie_api.git"
   },
-  "author": "",
+  "author": "Tamara Peric",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/tamperic/movie_api/issues"
@@ -18,6 +19,7 @@
   "homepage": "https://github.com/tamperic/movie_api#readme",
   "dependencies": {
     "body-parser": "^1.20.3",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "morgan": "^1.10.0"
   }
 }
