--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "express": "^4.21.2",
+    "mongoose": "^8.10.1",
     "morgan": "^1.10.0",
     "uuid": "^11.0.5"
   }
