--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "uuid": "^11.0.5"
+  },
+  "devDependencies": {
+    "jsdoc": "^4.0.4"
   }
 }
